--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </main>
 
     <footer>
-        <p>Site criado por Gustavo Guanabara para o CursoemVideo.</p>
+        <p>Site criado por Henrique Oliveira para o CursoemVideo.</p>
     </footer>
     
 </body>
